--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Twisted==15.4.0
 argparse==1.2.1
 attrs==15.1.0
 cffi==1.2.1
@@ -6,6 +7,7 @@ enum34==1.0.4
 idna==2.0
 ipaddress==1.0.14
 mainland==0.0.1
+ncolony==0.0.2
 ndg-httpsclient==0.4.0
 pyOpenSSL==0.15.1
 pyasn1==0.1.9
@@ -13,3 +15,4 @@ pycparser==2.14
 requests==2.7.0
 six==1.9.0
 wsgiref==0.1.2
+zope.interface==4.1.2
