--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,25 @@
-Flask==0.10.1
-Jinja2==2.8
-MarkupSafe==0.23
-PyNaCl==0.3.0
-Twisted==15.4.0
-Werkzeug==0.10.4
-argparse==1.2.1
 attrs==15.1.0
 cffi==1.2.1
 cryptography==1.0.2
 enum34==1.0.4
+Flask==0.10.1
 gunicorn==19.3.0
 idna==2.0
 ipaddress==1.0.14
 itsdangerous==0.24
+Jinja2==2.8
 mainland==0.0.1
+MarkupSafe==0.23
 ncolony==0.0.2
 ndg-httpsclient==0.4.0
 pex==1.0.3
-pyOpenSSL==0.15.1
 pyasn1==0.1.9
 pycparser==2.14
+PyNaCl==0.3.0
+pyOpenSSL==0.15.1
 requests==2.7.0
 six==1.9.0
-wsgiref==0.1.2
+Twisted==15.4.0
+Werkzeug==0.10.4
+wheel==0.26.0
 zope.interface==4.1.2
